# SmartAttendance

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  app  extract_chinese.py  lv_conf.h
.qoder/repowiki/zh/content/: Testing Strategy.md  功能模块详解.md  快速开始.md  报表生成系统.md  故障排除.md  数据库设计.md  核心模块详解.md  配置管理.md  附录.md  项目概述.md
.qoder/repowiki/zh/content/API参考手册/: API参考手册.md  数据层API.md
.qoder/repowiki/zh/content/API参考手册/UI组件API/: UI组件API.md  基础屏幕API.md  弹窗对话框API.md  菜单按钮API.md  表单组件API.md
.qoder/repowiki/zh/content/API参考手册/业务逻辑API/: 业务逻辑API.md  事件总线API.md  人脸识别API.md  用户管理API.md  考勤规则API.md
.qoder/repowiki/zh/content/API接口参考/: API接口参考.md  UI层API接口.md  数据层API接口.md
.qoder/repowiki/zh/content/API接口参考/业务层API接口/: 业务层API接口.md  人脸识别引擎API.md  考勤规则API.md  认证服务API.md
.qoder/repowiki/zh/content/UI框架设计/: LVGL图形库集成.md  UI框架设计.md  UI组件库设计.md  事件处理系统.md  屏幕管理机制.md  样式系统设计.md
.qoder/repowiki/zh/content/业务逻辑模块/: 业务逻辑模块.md  事件总线系统.md  人脸识别模块.md  考勤规则引擎.md  认证服务模块.md
.qoder/repowiki/zh/content/功能模块详解/: 中文字符支持.md  批量排班导入.md  班次管理界面.md
.qoder/repowiki/zh/content/开发指南/: 代码审查清单与质量保证.md  代码规范与最佳实践.md  代码规范与风格.md  开发工作流程.md  开发指南.md  开发流程与工作流.md  开发环境搭建.md  测试策略与实施.md  调试工具与技巧.md  调试技巧与工具.md
.qoder/repowiki/zh/content/扩展开发/: 扩展开发.md  扩展点与API设计.md  第三方服务集成.md
.qoder/repowiki/zh/content/扩展开发/插件开发/: UI组件扩展.md  报表格式扩展.md  插件开发.md  插件架构设计.md  认证方式扩展.md
.qoder/repowiki/zh/content/扩展开发/硬件设备集成/: 摄像头设备集成.md  显示设备集成.md  硬件抽象层设计.md  硬件设备集成.md
.qoder/repowiki/zh/content/扩展开发/硬件设备集成/输入设备集成/: IC卡读卡器集成.md  T9键盘集成指南.md  指纹识别器集成.md  触摸屏设备集成.md  输入设备集成.md
.qoder/repowiki/zh/content/数据层设计/: 事务管理.md  性能优化.md  数据层设计.md  数据库设计.md
.qoder/repowiki/zh/content/数据层设计/DAO接口设计/: DAO接口设计.md  事务管理.md  排班管理DAO.md  班次管理DAO.md  系统配置DAO.md  考勤记录DAO.md  部门管理DAO.md
.qoder/repowiki/zh/content/数据层设计/DAO接口设计/用户管理DAO/: 生物特征数据管理.md  用户基本信息管理.md  用户批量操作.md  用户查询接口.md  用户管理DAO.md
.qoder/repowiki/zh/content/数据层设计/数据模型/: 数据库表结构.md  数据模型.md  班次信息模型.md  用户信息模型.md  系统配置模型.md  考勤记录模型.md  部门信息模型.md
.qoder/repowiki/zh/content/系统架构设计/: 三层架构设计.md  事件驱动机制.md  事件驱动架构.md  分层架构详解.md  多线程设计模式.md  技术栈架构.md  系统架构设计.md  组件交互机制.md  组件交互流程.md
.qoder/repowiki/zh/content/部署与运维/: 故障排查.md  系统监控.md  编译与部署.md  运维最佳实践.md  部署与运维.md
.qoder/repowiki/zh/content/部署运维/: 性能优化.md  故障排除与维护.md  系统部署.md  编译打包.md  部署运维.md
.qoder/repowiki/zh/meta/: repowiki-metadata.json
docs/: SmartAttendance框架结构.txt
docs/markdowm/: Attendance_Setting_Form.md  FA03H_rules.md  T9键盘集成指南.md  appendix2_3Att_computer.md  系统稳定性测试.md
env/: env.sh
libs/lvgl/: CMakeLists.txt  lv_conf.h
libs/lvgl/doc/: readme.md
libs/lvgl/env/: env.sh
libs/lvgl/src/: main.c
libs/lvgl/src/drivers/sdl/: lv_sdl_window.c
src/: main.cpp
src/business/: attendance_rule.cpp  attendance_rule.h  auth_service.cpp  auth_service.h  event_bus.cpp  event_bus.h  face_demo.cpp  face_demo.h  report_generator.cpp  report_generator.h
src/data/: db_storage.cpp  db_storage.h
src/ui/: font_noto_16.c  ui_app.c  ui_app.cpp  ui_app.h  ui_controller.cpp  ui_controller.h  ui_theme.cpp  ui_theme.h
src/ui/common/: ime_chinese.cpp  ime_chinese.h  matrix_t9_keyboard.cpp  matrix_t9_keyboard.h  t9_keyboard.cpp  t9_keyboard.h  t9_keymap.cpp  t9_keymap.h  ui_style.cpp  ui_style.h  ui_widgets.cpp  ui_widgets.h
src/ui/managers/: ui_manager.cpp  ui_manager.h
src/ui/porting/: hal_keypad.cpp  hal_keypad.h
src/ui/screens/att_design/: ui_scr_att_design.cpp  ui_scr_att_design.h
src/ui/screens/att_stats/: ui_scr_att_stats.cpp  ui_scr_att_stats.h
src/ui/screens/home/: ui_scr_home.cpp  ui_scr_home.h
src/ui/screens/menu/: ui_scr_menu.cpp  ui_scr_menu.h
src/ui/screens/record_query/: ui_scr_record_query.cpp  ui_scr_record_query.h
src/ui/screens/sys_info/: ui_scr_sys_info.cpp  ui_scr_sys_info.h
src/ui/screens/system/: ui_sys_settings.cpp  ui_sys_settings.h
src/ui/screens/user_mgmt/: ui_user_mgmt.cpp  ui_user_mgmt.h
tools/: analyze_stability.py  quick_stability_test.sh  stability_test.sh  stress_test.sh  verify_test.sh
tools/stream/: run.bat  run.sh  stream.ps1
